--- a/home.html
+++ b/home.html
@@ -22,10 +22,10 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.png" alt="" /></span>
-							<h1>Innovation Practicum Admin</h1>
-							<p>Design Sprint - Rapid Prototyping</p>
+							<h1> Vikash GS</h1>
+							<p>  C2_Team_180</p>
 						</header>
-						<!--
+						
 						<hr />
 						<h2>Extra Stuff!</h2>
 						<form method="post" action="#">
@@ -61,7 +61,7 @@
 							</ul>
 						</form>
 						<hr />
-						-->
+						
 						<footer>
 							<ul class="icons">
 								<li><a href="https://twitter.com/FORGE_FORCE" class="icon brands fa-twitter">Twitter</a></li>
